--- a/multivalueMockup.html
+++ b/multivalueMockup.html
@@ -5,7 +5,7 @@
 <title>K-valued fuzzy-max with slope-Y</title>
 <style>
 /* cosmetics -------------------------------------------------------- */
-body{font-family:system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;margin:0;background:#f5f5f5}
+body{font-family:system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;margin:0;background:white}
 .panel-wrapper{background:hsl(210 50% 92%);border-radius:10px;padding:20px;max-width:640px;margin:40px auto}
 .panel{position:relative;width:90%;max-width:600px;height:150px;display:flex;flex-direction:column;justify-content:center;align-items:center;background:#fff;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,.1);margin:12px auto}
 .panel-header{position:absolute;top:10px;left:15px;font-weight:600;font-size:22px}
