--- a/narrativeEquilibriumCorrInfo.html
+++ b/narrativeEquilibriumCorrInfo.html
@@ -8,7 +8,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: hsl(200 70% 85%);
+    background: white;
     overflow-x: hidden;
 }
 
@@ -204,7 +204,7 @@ body {
 </style>
 </head>
 <body>
-    <div class="game-container">
+    <div id="gameContainer" class="game-container" style="display: none;">
         <div class="panels-section">
             <div id="roundDisplay" class="roundDisplay"></div>
             
@@ -307,6 +307,7 @@ let xReady = false;
 let colorDisplayed = false;
 
 /* ========================== DOM ELEMENTS ========================== */
+const gameContainer = document.getElementById("gameContainer");
 const btnNo = document.getElementById("btnNo");
 const btnYes = document.getElementById("btnYes");
 const panelXinfo = document.getElementById("panelXinfo");
@@ -674,9 +675,13 @@ btnNo.addEventListener("click", () => {
 document.addEventListener("keydown", handleKeyPress);
 
 /* ===================== INITIALIZE GAME ===================== */
-applyGameConfiguration();
+// Don't apply configuration immediately - wait for initialization
 
 setTimeout(() => {
+    // Apply configuration and show the game interface
+    applyGameConfiguration();
+    gameContainer.style.display = "flex";
+    
     sendDataToQualtrics('GAME_START', { started: true });
     nextRound();
 }, 3000);
