--- a/narrativeEquilibriumCorrInfo.html
+++ b/narrativeEquilibriumCorrInfo.html
@@ -126,7 +126,7 @@ body {
     padding: 12px;
     margin-bottom: 15px;
     box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-    font-size: 11px;
+    font-size: 14px;
 }
 
 .stat-box:last-child {
@@ -238,7 +238,7 @@ body {
             <div class="stats-container">
                 <div class="stat-box stat-1">
                     <div id="influenceText1" class="stat-text">
-                        <div class="insufficient-data">Collecting data... <br><br><br><br><br><br><br></div>
+                        <div class="insufficient-data">Collecting data... <br><br><br><br><br><br></div>
                     </div>
                     <div id="barContainer1" class="bar-container" style="display: none;">
                         <div class="bar-center"></div>
@@ -254,7 +254,7 @@ body {
                 
                 <div class="stat-box stat-2">
                     <div id="influenceText2" class="stat-text">
-                        <div class="insufficient-data">Collecting data...<br><br><br><br><br><br><br></div>
+                        <div class="insufficient-data">Collecting data...<br><br><br><br><br><br></div>
                     </div>
                     <div id="barContainer2" class="bar-container" style="display: none;">
                         <div class="bar-center"></div>
