--- a/narrativeEquilibriumBelief.html
+++ b/narrativeEquilibriumBelief.html
@@ -18,6 +18,7 @@ body {
     margin: 20px auto;
     gap: 15px;
     align-items: flex-start;
+    margin-left: 250px;
 }
 
 .panels-section {
@@ -1118,7 +1119,7 @@ function initializeGame() {
     sendDataToQualtrics('GAME_START', { started: true });
 }
 
-setTimeout(initializeGame, 1000);
+setTimeout(initializeGame, 2000);
 
 </script>
 </body>
