--- a/narrativeEquilibriumCorrInfo.html
+++ b/narrativeEquilibriumCorrInfo.html
@@ -18,6 +18,7 @@ body {
     margin: 20px auto;
     gap: 15px;
     align-items: flex-start;
+    margin-left: 250px;
 }
 
 .panels-section {
@@ -682,7 +683,7 @@ setTimeout(() => {
     gameContainer.style.display = "flex";
     sendDataToQualtrics('GAME_START', { started: true });
     nextRound();
-}, 1000);
+}, 2000);
 
 </script>
 </body>
