--- a/narrativeEquilibriumCorrInfo.html
+++ b/narrativeEquilibriumCorrInfo.html
@@ -365,6 +365,7 @@ function updateSingleStat(statNum, player1Name, player2Name) {
         
         // Return data even when insufficient
         statData.displayText1 = "Insufficient data";
+        statData.displayText2 = "Insufficient data";
         return statData;
     }
     
