--- a/narrativeEquilibriumBelief.html
+++ b/narrativeEquilibriumBelief.html
@@ -692,7 +692,7 @@ function applyGameConfiguration() {
         },
         "AY": {
             activePanel: 'A',
-            instructionTitle: "Making Decisions at Varying Button Costs!",
+            instructionTitle: "Make Decisions at Varying Button Costs!",
             instructionBullets: [
                 `You will receive a bonus of $${gameConfig.yBonus} if <b>${gameConfig.playerName2}</b> presses ${gameConfig.playerPronoun2} button.`,
                 `The cost of pressing or not pressing the button will vary across decisions.`
