--- a/narrativeEquilibriumTwoVar.html
+++ b/narrativeEquilibriumTwoVar.html
@@ -143,7 +143,7 @@ body {
 .decision-title {
     font-size: 20px;
     text-align: center;
-    margin-bottom: 20px;
+    margin-top: 20px;
     color: #333;
     font-weight: bold;
 }
