--- a/narrativeEquilibriumBelief.html
+++ b/narrativeEquilibriumBelief.html
@@ -175,7 +175,7 @@ body {
 .green { background-color: green; }
 .red { background-color: red; }
 
-.selected {
+.actionButton.selected {
     outline: 5px solid black;
     transform: translateY(-2px);
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
