--- a/narrativeEquilibriumCorrInfo.html
+++ b/narrativeEquilibriumCorrInfo.html
@@ -297,8 +297,8 @@ let gameConfig = {
     yBonus: 1.0,
     aCost: 0.25,
     pY: 0.5,
-    playerName1: "Player A",
-    playerName2: "Player B", 
+    playerName1: "Player 1",
+    playerName2: "Player 2", 
     playerPronoun1: "their",
     playerPronoun2: "their",
     noise: 0.1,
