--- a/narrativeEquilibriumCorrInfo.html
+++ b/narrativeEquilibriumCorrInfo.html
@@ -305,7 +305,7 @@ let gameConfig = {
     causal: 0,
     playerIcon1: "https://raw.githubusercontent.com/Jindi-Huang/qualtrics-html/main/graphs/user1.png",
     playerIcon2: "https://raw.githubusercontent.com/Jindi-Huang/qualtrics-html/main/graphs/user2.png",
-    currentHue: 0,
+    currentHue: 100,
     treatment: "exo", // "exo" or "endog"
     pA: 0.5,
     buttonConfig: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
@@ -532,7 +532,7 @@ function applyGameConfiguration() {
     if (elements.playerIcon1) elements.playerIcon1.src = gameConfig.playerIcon1;
     if (elements.playerIcon2) elements.playerIcon2.src = gameConfig.playerIcon2;
     
-    document.body.style.background = 'white';
+    document.body.style.background = `hsl(${gameConfig.currentHue}, 70%, 85%)`;
 }
 
 
