--- a/narrativeEquilibriumCorrInfo.html
+++ b/narrativeEquilibriumCorrInfo.html
@@ -3,127 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <title>Button Game</title>
+<link rel="stylesheet" href="shared-styles.css">
 <style>
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: white;
-}
-
-.game-container {
-    display: flex;
-    max-width: 650px;
-    margin: 20px auto;
-    gap: 15px;
-    align-items: flex-start;
-    margin-left: 100px;
-}
-
-.panels-section {
-    flex: 1;
-    min-width: 500px;
-}
-
-.roundDisplay {
-    font-size: 18px;
-    text-align: center;
-    padding: 10px 0;
-    margin-bottom: 10px;
-    color: #333;
-    font-weight: bold;
-}
-
-.panel {
-    position: relative;
-    width: 100%;
-    height: 120px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    margin-bottom: 10px;
-    border: 1px solid black;
-}
-
-.panel-header {
-    position: absolute;
-    top: 8px;
-    left: 12px;
-    display: flex;
-    align-items: center;
-    gap: 6px;
-}
-
-.panel-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 2px solid #fff;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.2);
-}
-
-.panel-name {
-    font-weight: bold;
-    font-size: 20px;
-    color: #333;
-}
-
-.text {
-    text-align: center;
-    font-size: 18px;
-    padding: 8px;
-    color: #333;
-    margin-top: 0;
-}
-
-.button-container {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
-}
-
-.actionButton {
-    padding: 8px 16px;
-    margin: 0;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    color: white;
-    border-radius: 4px;
-    transition: background-color 0.3s, transform 0.2s;
-    width: 150px;
-    text-align: center;
-}
-
-.actionButton:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-}
-
-.actionButton:hover.grayed-out {
-    transform: none;
-    box-shadow: none;
-}
-
-.green { background-color: #4CAF50; }
-.red { background-color: #f44336; }
-.grayed-out { 
-    background-color: #cccccc !important; 
-    color: #666666 !important; 
-    cursor: not-allowed !important;
-}
-.hidden { display: none; }
-
-.flash {
-    outline: 3px solid orange;
-    transition: outline 0.2s ease;
-}
-
 .stats-container {
     width: 300px;
     flex-shrink: 0;
@@ -134,88 +15,6 @@ body {
     box-shadow: 0 3px 10px rgba(0,0,0,0.15);
     border: 1px solid rgba(0,0,0,0.1);
 }
-
-.stat-box {
-    background: white;
-    border-radius: 6px;
-    padding: 12px;
-    margin-bottom: 15px;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-    font-size: 14px;
-}
-
-.stat-box:last-child {
-    margin-bottom: 30px;
-}
-
-.stat-text {
-    margin-bottom: 8px;
-    line-height: 1.3;
-    font-weight: 500;
-    color: #333;
-}
-
-.bar-container {
-    background: #e9ecef;
-    height: 16px;
-    border-radius: 8px;
-    position: relative;
-    overflow: hidden;
-    margin: 6px 0px;
-}
-
-.bar-center {
-    position: absolute;
-    left: 50%;
-    top: 0;
-    width: 1px;
-    height: 100%;
-    background: #495057;
-    z-index: 2;
-}
-
-.bar-fill {
-    height: 100%;
-    border-radius: 8px;
-    transition: all 0.3s ease;
-    position: absolute;
-    z-index: 1;
-}
-
-.bar-positive {
-    background: linear-gradient(90deg, #28a745, #20c997);
-    left: 50%;
-}
-
-.bar-negative {
-    background: linear-gradient(90deg, #dc3545, #fd7e14);
-    right: 50%;
-}
-
-.bar-labels {
-    display: flex;
-    justify-content: space-between;
-    font-size: 10px;
-    color: #666;
-}
-
-.data-counts {
-    font-size: 10px;
-    color: #666;
-    text-align: center;
-    margin-top: 4px;
-}
-
-.insufficient-data {
-    text-align: center;
-    color: #999;
-    font-style: italic;
-    font-size: 12px;
-}
-
-.stat-1 { margin-top: 50px; }
-.stat-2 { margin-top: 20px; }
-
 </style>
 </head>
 
