--- a/narrativeEquilibriumTwoVar.html
+++ b/narrativeEquilibriumTwoVar.html
@@ -3,132 +3,26 @@
 <head>
 <meta charset="utf-8"/>
 <title>Button Game</title>
+<link rel="stylesheet" href="shared-styles.css">
 <style>
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: white;
-}
 
-.game-container {
-    display: flex;
-    max-width: 650px;
-    margin: 20px auto;
-    gap: 15px;
-    align-items: flex-start;
-    justify-content: center;
-}
-
+/* Panels section override - different sizing and margin */
 .panels-section {
-    flex: 1;
-    min-width: 500px;
     max-width: 500px;
     margin: 20px auto;
 }
 
-.roundDisplay {
-    font-size: 18px;
-    text-align: center;
-    padding: 10px 0;
-    margin-bottom: 10px;
-    color: #333;
-    font-weight: bold;
+/* Panel override - different text margin and padding */
+.text {
+    margin-top: 20px;
 }
 
 .panel {
-    position: relative;
-    width: 100%;
-    min-height: 120px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    margin-bottom: 10px;
-    border: 1px solid black;
     padding: 20px;
     box-sizing: border-box;
 }
 
-.panel-header {
-    position: absolute;
-    top: 8px;
-    left: 12px;
-    display: flex;
-    align-items: center;
-    gap: 6px;
-}
-
-.panel-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 2px solid #fff;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.2);
-}
-
-.panel-name {
-    font-weight: bold;
-    font-size: 20px;
-    color: #333;
-}
-
-.text {
-    text-align: center;
-    font-size: 18px;
-    padding: 8px;
-    color: #333;
-    margin-top: 20px;
-}
-
-.button-container {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
-}
-
-.actionButton {
-    padding: 8px 16px;
-    margin: 0;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    color: white;
-    border-radius: 4px;
-    transition: background-color 0.3s, transform 0.2s;
-    width: 150px;
-    text-align: center;
-}
-
-.actionButton:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-}
-
-.actionButton:hover.grayed-out {
-    transform: none;
-    box-shadow: none;
-}
-
-.green { background-color: #4CAF50; }
-.red { background-color: #f44336; }
-.grayed-out { 
-    background-color: #cccccc !important; 
-    color: #666666 !important; 
-    cursor: not-allowed !important;
-}
-.hidden { display: none; }
-
-.flash {
-    outline: 3px solid orange;
-    transition: outline 0.2s ease;
-}
-
-/* Decision phase styles */
+/* Decision phase styles - unique to this file */
 .decision-content {
     display: none;
     width: 100%;
@@ -152,6 +46,7 @@ body {
     text-align: center;
 }
 
+/* Choice system - unique to this file */
 .choice-grid {
     display: grid;
     grid-template-columns: 1fr;
@@ -227,12 +122,14 @@ body {
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
 }
 
+/* Cost amount styling */
 .cost-amt {
     display: inline-block;
     font-weight: bold;
     color: #faeb7a;
 }
 
+/* Submit system - similar to other files but keeping for consistency */
 .submit-container {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -262,19 +159,6 @@ body {
     transform: none;
 }
 
-.validation-message {
-    margin-top: 10px;
-    padding: 10px;
-    border-radius: 4px;
-    text-align: center;
-    font-size: 14px;
-}
-
-.validation-error {
-    background: #fdf2f2;
-    color: #9a3a3a;
-    border: 1px solid #f8b4b4;
-}
 
 .progress-indicator {
     margin-top: 10px;
@@ -283,18 +167,16 @@ body {
     color: #666;
 }
 
-
-
 </style>
 </head>
 
 <body>
-    <div class="decision-title" style="display: none;">Make Your Decisions</div>
-    <div class="decision-instructions" style="display: none;">
-        Now you will make decisions for different costs. 
-    </div>
     <div id="gameContainer" class="game-container" style="display: none;">
         <div class="panels-section">
+            <div class="decision-title" style="display: none;">Make Your Decisions</div>
+            <div class="decision-instructions" style="display: none;">
+                Now you will make decisions for different costs. <br><br>
+            </div>
             <div id="roundDisplay" class="roundDisplay"></div>
             
             <div id="panelAchoice" class="panel">
