--- a/dietersDilemma.html
+++ b/dietersDilemma.html
@@ -34,6 +34,7 @@
           if (qConfig.id) CONFIG.id = qConfig.id;
           if (qConfig.yBonus !== undefined) CONFIG.yBonus = qConfig.yBonus;
           if (qConfig.aCost !== undefined) CONFIG.aCost = qConfig.aCost;
+          if (qConfig.playerName0) CONFIG.playerName0 = qConfig.playerName0;
           if (qConfig.playerName1) CONFIG.playerName1 = qConfig.playerName1;
           if (qConfig.playerName2) CONFIG.playerName2 = qConfig.playerName2;
           if (qConfig.playerIcon0) CONFIG.playerIcon0 = qConfig.playerIcon0;
@@ -68,7 +69,7 @@
     // X = chemical level (1=normal, 0=abnormal)  
     // Y = feeling (1=headache free, 0=headache)
     const CONFIG = {
-      yBonus: 5.00,           // Bonus when Y=1 (headache free)
+      yBonus: 2.00,           // Bonus when Y=1 (headache free)
       aCost: 0.00,            // Cost of drinking (A=1)
       totalRounds: 100,
       currency: '$',
@@ -81,6 +82,7 @@
         qFeelGood: 0.80,
       },
       
+      playerName0: 'Driftwell', // Drink name (A)
       playerName1: 'Qivaryn',   // Chemical name (X)
       playerName2: 'Feeling',   // Outcome name (Y)
       playerIcon0: '🥤',        // Icon for drink action (A)
@@ -402,7 +404,7 @@
             >
               <span className="text-xl">{CONFIG.playerIcon0}</span>
               <div className="text-left">
-                <div>Drink</div>
+                <div>Drink {CONFIG.playerName0}</div>
                 <div className="text-xs opacity-70">-{CONFIG.currency}{CONFIG.aCost}</div>
               </div>
             </button>
@@ -426,7 +428,7 @@
           <div className="mt-3 space-y-2">
             <div className="grid grid-cols-2 gap-2 text-xs">
               <div className="bg-slate-700/50 rounded p-2 text-center">
-                <div className="text-blue-400">Drink → {CONFIG.playerName1}</div>
+                <div className="text-blue-400">{CONFIG.playerName0} → {CONFIG.playerName1}</div>
                 <div className="text-white font-bold">
                   {stats.A1.total > 0 
                     ? `${Math.round(stats.A1.X1 / stats.A1.total * 100)}% normal`
@@ -444,7 +446,7 @@
             </div>
             <div className="grid grid-cols-2 gap-2 text-xs">
               <div className="bg-slate-700/50 rounded p-2 text-center">
-                <div className="text-blue-400">Drink → Headache Free</div>
+                <div className="text-blue-400">{CONFIG.playerName0} → Headache Free</div>
                 <div className="text-white font-bold">
                   {A1Y1Rate !== null ? `${A1Y1Rate}%` : '—'}
                 </div>
@@ -640,10 +642,10 @@
               </div>
               
               <div className="bg-gray-100 rounded-xl p-4 mb-4">
-                <h3 className="font-bold mb-3 text-gray-700">{CONFIG.playerIcon0} Drink → Headache Free</h3>
+                <h3 className="font-bold mb-3 text-gray-700">{CONFIG.playerIcon0} {CONFIG.playerName0} → Headache Free</h3>
                 <div className="grid grid-cols-2 gap-4">
                   <div className="bg-white rounded-lg p-3 border border-gray-200">
-                    <div className="text-sm text-gray-500">When Drank</div>
+                    <div className="text-sm text-gray-500">When Drank {CONFIG.playerName0}</div>
                     <div className="text-2xl font-bold text-gray-800">{A1Y1Rate}%</div>
                     <div className="text-xs text-gray-500">headache free ({stats.A1.Y1}/{stats.A1.total})</div>
                   </div>
@@ -659,7 +661,7 @@
                 <p className="text-sm text-emerald-600 mb-1">Payment Round Selected</p>
                 <p className="text-2xl font-bold text-emerald-800 mb-2">Round #{selectedPaymentRound}</p>
                 <div className="text-sm text-emerald-700">
-                  {pA === 1 ? `${CONFIG.playerIcon0} Drank` : '⊘ Skipped'} → 
+                  {pA === 1 ? `${CONFIG.playerIcon0} Drank ${CONFIG.playerName0}` : '⊘ Skipped'} → 
                   {pX === 1 ? ' Normal' : ' Abnormal'} → 
                   {pY === 1 ? ' 😊 Headache Free' : ' 😔 Headache'}
                 </div>
@@ -710,7 +712,7 @@
                   phase === 'chemical' ? 'bg-amber-500/20 text-amber-300 border border-amber-500/30' :
                   'bg-green-500/20 text-green-300 border border-green-500/30'
                 }`}>
-                  {phase === 'decision' && `Morning: Will you drink?`}
+                  {phase === 'decision' && `Morning: Will you drink ${CONFIG.playerName0}?`}
                   {phase === 'chemical' && `Reading your ${CONFIG.playerName1} level...`}
                   {phase === 'outcome' && `Later this day: ${currentY === 1 ? 'Headache free! 😊' : 'Headache 😔'}`}
                 </span>
