--- a/dietersDilemma.html
+++ b/dietersDilemma.html
@@ -11,6 +11,16 @@
   <style>
     * { box-sizing: border-box; }
     body { margin: 0; padding: 0; }
+
+    /* Hide slider thumb when confidence not yet selected */
+    .slider-hidden-thumb::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      opacity: 0;
+    }
+    .slider-hidden-thumb::-moz-range-thumb {
+      opacity: 0;
+    }
   </style>
 </head>
 <body>
@@ -757,7 +767,7 @@
                   max="100"
                   value={confidence || 50}
                   onChange={(e) => setConfidence(parseInt(e.target.value))}
-                  className="w-full h-3 bg-gray-200 rounded-lg appearance-none cursor-pointer accent-blue-600"
+                  className={`w-full h-3 bg-gray-200 rounded-lg appearance-none cursor-pointer accent-blue-600 ${confidence === null ? 'slider-hidden-thumb' : ''}`}
                 />
                 <div className="text-center mt-3">
                   <span className="text-3xl font-bold text-blue-600">
